<?xml version="1.0"?>
<package format="2">
  <name>calibration_gazebo</name>
  <version>1.0.0</version>
  <description>The calibration_gazebo package</description>

  <maintainer email="morhumyk@fel.cvut.cz">Morhunenko Mykola</maintainer>
  <author email="morhumyk@fel.cvut.cz">Morhunenko Mykola</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>

</package>
